# list_smith

./: .gitignore  .pubignore  .rumdl.toml  .yamllint.yaml  APPENDIX.md  CHANGELOG.md  CODESTYLE.md  LICENSE  README.md  analysis_options.yaml  context7.json  dart_dependency_validator.yaml  pubspec.yaml
.ai/: AGENTS.md  CLAUDE.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench-analyzer.yml  benchmark.yml  changelog.yml  example.yml  package.yml  publish.yml  repo.yml
benchmark/: .gitignore  README.md
benchmark/app/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
benchmark/harness/: result_writer.dart  scenario_args.dart
benchmark/micro/: bucket_by_group_scaling.dart  dedup_scaling.dart  observer_dispatch.dart  sync_search_scaling.dart  wrapping_overhead.dart
benchmark/python/: .gitignore  pyproject.toml  run.py
benchmark/python/list_smith_bench/: config.py
benchmark/python/list_smith_bench/data/dtos/: compare_row.py  result_record.py
benchmark/python/list_smith_bench/data/utils/: charts.py  flutter_config.py  io.py  markdown.py  meta.py  stats.py
benchmark/python/list_smith_bench/subcommands/: build.py  compare.py  report.py  runner.py
benchmark/python/tests/: test_stats.py
benchmark/reports/: SUMMARY.md
example/: .gitignore  CODESTYLE.md  README.md  analysis_options.yaml  pubspec.yaml
example/.ai/: AGENTS.md
example/lib/: main.dart
example/test/: widget_test.dart
lib/: list_smith.dart
scripts/: README.md  release.sh
test/: list_smith_test.dart
test/support/: bdd.dart  fake_sources.dart  list_smith_harness.dart  recording_list_smith_observer.dart  support.dart
test/unit_tests/: empty_page_behaviour_test.dart  (+8 more)
(+153 files in other folders)
